--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	h1 {
+		@apply text-3xl md:text-4xl font-semibold mb-4;
+	}
+
+	h2 {
+		@apply text-xl md:text-2xl font-semibold mb-3;
+	}
+}
