--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,10 @@
 	}
 
 	h2 {
-		@apply text-xl md:text-2xl font-semibold mb-3;
+		@apply text-2xl md:text-3xl font-semibold mb-3;
+	}
+
+	h3 {
+		@apply text-lg md:text-xl font-semibold mb-2;
 	}
 }
