--- a/src/app.css
+++ b/src/app.css
@@ -16,11 +16,23 @@
 	}
 
 	label {
-		@apply text-sm text-slate-300;
+		@apply text-sm text-slate-300 mb-1;
 	}
 
 	select,
 	input {
-		@apply bg-slate-700 focus:outline-2 focus:outline-offset-1  focus:outline-brand-default text-sm block w-full border-none rounded-lg  sm:text-sm text-white placeholder-slate-400;
+		@apply bg-slate-700 focus:outline-2 rounded focus:outline-offset-1  focus:outline-brand-default text-sm block w-full border-none  sm:text-sm text-white placeholder-slate-400;
+	}
+
+	table {
+		@apply w-full table-auto border-collapse border-t border-slate-700;
+	}
+
+	th,
+	td {
+		@apply border-b border-slate-700 p-2 text-left;
+	}
+	th {
+		@apply text-white;
 	}
 }
