Update view on portfolio builder

--- a/src/app.css
+++ b/src/app.css
@@ -25,7 +25,7 @@
 	}
 
 	table {
-		@apply w-full table-auto border-collapse border-t border-slate-700;
+		@apply w-full table-auto border-collapse  border-slate-700;
 	}
 
 	th,
