--- a/src/app.css
+++ b/src/app.css
@@ -4,15 +4,15 @@
 
 @layer base {
 	h1 {
-		@apply text-xl md:text-2xl font-semibold mb-4;
+		@apply text-xl md:text-2xl font-semibold;
 	}
 
 	h2 {
-		@apply text-lg md:text-xl font-semibold mb-3 text-white;
+		@apply text-lg md:text-xl font-semibold  text-white;
 	}
 
 	h3 {
-		@apply text-base md:text-lg font-semibold mb-2 text-slate-200;
+		@apply text-base md:text-lg font-semibold  text-slate-200;
 	}
 
 	label {
@@ -33,6 +33,30 @@
 		@apply border-b border-slate-700 p-2 text-left;
 	}
 	th {
-		@apply text-white;
+		@apply text-left text-sm text-slate-400 p-2 border-t-transparent;
 	}
+}
+
+/* For Webkit (Chrome, Safari, Edge) */
+.overflow-y-auto::-webkit-scrollbar {
+	width: 8px; /* Adjust scrollbar width */
+}
+
+.overflow-y-auto::-webkit-scrollbar-track {
+	background: #2d3748; /* Track color */
+}
+
+.overflow-y-auto::-webkit-scrollbar-thumb {
+	background: #2d3748; /* Handle color */
+	border-radius: 4px; /* Handle border radius */
+}
+
+.overflow-y-auto::-webkit-scrollbar-thumb:hover {
+	background: #718096; /* Handle color on hover */
+}
+
+/* For Firefox */
+.overflow-y-auto {
+	scrollbar-width: thin; /* "auto" or "thin" */
+	scrollbar-color: #4a5568 #2d3748; /* Handle color Track color */
 }
