--- a/src/app.css
+++ b/src/app.css
@@ -21,7 +21,7 @@
 
 	select,
 	input {
-		@apply bg-slate-700 focus:outline-2 rounded focus:outline-offset-1  focus:outline-brand-default text-sm block w-full border-none  sm:text-sm text-white placeholder-slate-400;
+		@apply bg-slate-700 focus:outline-none   rounded focus:outline-offset-1  focus:outline-brand-default text-sm block w-full border-none p-2 sm:text-sm text-white placeholder-slate-400;
 	}
 
 	table {
