--- a/src/app.css
+++ b/src/app.css
@@ -19,10 +19,10 @@
 		@apply text-sm text-slate-300 mb-1;
 	}
 
-	select,
+	/* select,
 	input {
-		@apply bg-slate-700 focus:outline-none   rounded focus:outline-offset-1  focus:outline-brand-default text-sm block w-full border-none p-2 sm:text-sm text-white placeholder-slate-400;
-	}
+		@apply bg-slate-700 focus:outline-none rounded focus:outline-offset-1 focus:outline-brand-default text-sm block w-full border-none p-2 sm:text-sm text-white placeholder-slate-400;
+	} */
 
 	table {
 		@apply w-full table-auto border-collapse  border-slate-700;
@@ -35,6 +35,14 @@
 	th {
 		@apply text-left text-sm text-slate-400 p-2 border-t-transparent;
 	}
+}
+
+.input-base {
+	@apply bg-slate-700 outline-none flex items-center border border-transparent focus:border-brand-default focus-within:border-brand-default rounded text-sm  w-full  p-2 px-3 sm:text-sm text-white placeholder-slate-400;
+}
+
+.input-base input {
+	@apply bg-transparent text-sm block w-full focus:outline-none border-none focus:ring-0;
 }
 
 /* For Webkit (Chrome, Safari, Edge) */
