--- a/src/app.css
+++ b/src/app.css
@@ -4,17 +4,16 @@
 
 @layer base {
 	h1 {
-		@apply text-xl md:text-2xl font-semibold;
+		@apply text-2xl font-semibold;
+	}
+
+	h2 {
+		@apply text-lg font-semibold text-brand-light;
 	}
 
 	label {
-		@apply text-sm text-slate-300 mb-1;
+		@apply text-sm text-slate-200 mb-1;
 	}
-
-	/* select,
-	input {
-		@apply bg-slate-700 focus:outline-none rounded focus:outline-offset-1 focus:outline-brand-default text-sm block w-full border-none p-2 sm:text-sm text-white placeholder-slate-400;
-	} */
 
 	table {
 		@apply w-full table-auto border-collapse border-slate-700 text-sm;
@@ -25,13 +24,22 @@
 		@apply border-b border-slate-700 p-2 text-left;
 	}
 	th {
-		@apply text-left text-sm text-slate-400 p-2 border-t-transparent;
+		@apply text-left text-sm text-white p-2 border-t-transparent;
+	}
+	td {
+		@apply text-slate-300;
+	}
+}
+
+@layer components {
+	.card {
+		@apply rounded bg-slate-800 border border-slate-600 p-6;
 	}
 }
 
 select,
 .input-base {
-	@apply bg-slate-700 h-9 outline-none flex items-center border border-transparent focus:border-brand-default focus-within:border-brand-default rounded text-sm  w-full p-2 sm:text-sm text-white placeholder-slate-400;
+	@apply bg-slate-700 border-slate-600 h-9 outline-none flex items-center border  focus:border-brand-default focus-within:border-brand-default rounded text-sm  w-full p-2 sm:text-sm text-white placeholder-slate-400;
 }
 
 .input-base input {
