--- a/src/app.css
+++ b/src/app.css
@@ -12,34 +12,34 @@
 	}
 
 	label {
-		@apply text-sm text-slate-200 mb-1;
+		@apply text-sm text-ui-200 mb-1;
 	}
 
 	table {
-		@apply w-full table-auto border-collapse border-slate-700 text-sm;
+		@apply w-full table-auto border-collapse border-ui-700 text-sm;
 	}
 
 	th,
 	td {
-		@apply border-b border-slate-700 p-2 text-left;
+		@apply border-b border-ui-700 p-2 text-left;
 	}
 	th {
 		@apply text-left text-sm text-white p-2 border-t-transparent;
 	}
 	td {
-		@apply text-slate-300;
+		@apply text-ui-300;
 	}
 }
 
 @layer components {
 	.card {
-		@apply rounded bg-slate-800 border border-slate-600 p-6;
+		@apply rounded bg-ui-900 border border-ui-700 p-6;
 	}
 }
 
 select,
 .input-base {
-	@apply bg-slate-700 border-slate-600 h-9 outline-none flex items-center border  focus:border-brand-default focus-within:border-brand-default rounded text-sm  w-full p-2 sm:text-sm text-white placeholder-slate-400;
+	@apply bg-ui-800 border-ui-700 h-9 outline-none flex items-center border  focus:border-brand-default focus-within:border-brand-default rounded text-sm  w-full p-2 sm:text-sm text-white placeholder-ui-400;
 }
 
 .input-base input {
