--- a/src/app.css
+++ b/src/app.css
@@ -33,7 +33,7 @@
 
 @layer components {
 	.card {
-		@apply rounded bg-ui-900 border border-ui-700 p-6;
+		@apply rounded-lg bg-ui-900 border border-ui-700 p-6;
 	}
 }
 
