--- a/src/app.css
+++ b/src/app.css
@@ -103,7 +103,7 @@
 
 @layer components {
 	.card {
-		@apply rounded-lg bg-ui-950 border border-ui-700 p-6;
+		@apply rounded-md border  border-ui-700 p-6;
 	}
 }
 
