--- a/src/app.css
+++ b/src/app.css
@@ -86,12 +86,12 @@
 	}
 
 	table {
-		@apply w-full table-auto border-collapse border-ui-700 text-sm;
+		@apply w-full table-auto border-collapse border-ui-800 text-sm;
 	}
 
 	th,
 	td {
-		@apply border-b border-ui-700 py-3 px-2 text-left;
+		@apply border-b border-ui-800 py-3 px-2 text-left;
 	}
 	th {
 		@apply text-left text-sm text-ui-300  border-t-transparent;
@@ -103,7 +103,7 @@
 
 @layer components {
 	.card {
-		@apply rounded-lg border  border-ui-700 bg-ui-950 p-6;
+		@apply rounded-xl border  border-ui-800 bg-ui-950 p-6;
 	}
 }
 
