--- a/src/app.css
+++ b/src/app.css
@@ -105,6 +105,12 @@
 	.card {
 		@apply rounded-xl border  border-ui-800 bg-ui-950 p-6;
 	}
+
+	.tab-trigger {
+		@apply rounded-none bg-transparent w-20 !important;
+		@apply data-[state=active]:bg-transparent data-[state=active]:border-b-2 data-[state=active]:border-b-primary data-[state=active]:px-2 data-[state=active]:py-1;
+		@apply data-[state=inactive]:text-ui-400 data-[state=inactive]:px-2 data-[state=inactive]:py-1;
+	}
 }
 
 /* For Webkit (Chrome, Safari, Edge) */
