--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,38 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@config '../tailwind.config.js';
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
+}
+
+@utility card {
+  @apply rounded-xl border border-ui-800 bg-ui-950 p-6;
+}
+
+@utility tab-trigger {
+  @apply rounded-none! bg-transparent! w-20!;
+  @apply data-[state=active]:bg-transparent data-[state=active]:border-b-2 data-[state=active]:border-b-primary data-[state=active]:px-2 data-[state=active]:py-1;
+  @apply data-[state=inactive]:text-ui-400 data-[state=inactive]:px-2 data-[state=inactive]:py-1;
+}
+
+@utility tab-trigger--scenarios {
+  @apply bg-transparent px-4 py-2 data-[state=active]:border-b data-[state=active]:bg-transparent border-b-white rounded-none;
+}
 
 @layer base {
 	:root {
@@ -98,22 +130,6 @@
 	}
 	td {
 		@apply text-ui-200;
-	}
-}
-
-@layer components {
-	.card {
-		@apply rounded-xl border border-ui-800 bg-ui-950 p-6;
-	}
-
-	.tab-trigger {
-		@apply rounded-none bg-transparent w-20 !important;
-		@apply data-[state=active]:bg-transparent data-[state=active]:border-b-2 data-[state=active]:border-b-primary data-[state=active]:px-2 data-[state=active]:py-1;
-		@apply data-[state=inactive]:text-ui-400 data-[state=inactive]:px-2 data-[state=inactive]:py-1;
-	}
-
-	.tab-trigger--scenarios {
-		@apply bg-transparent px-4 py-2 data-[state=active]:border-b data-[state=active]:bg-transparent border-b-white rounded-none;
 	}
 }
 
