--- a/src/app.css
+++ b/src/app.css
@@ -138,7 +138,8 @@
 	}
 
 	.container {
-		@apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
+		width: 1400px !important;
+		@apply mx-auto px-2 sm:px-4;
 	}
 
 	.calculator-heading {
@@ -146,7 +147,7 @@
 	}
 
 	.card-heading {
-		@apply text-lg font-semibold text-primary-light leading-none;
+		@apply text-lg font-semibold text-primary-light leading-none mb-2;
 	}
 
 	label {
