--- a/src/app.css
+++ b/src/app.css
@@ -138,8 +138,8 @@
 	}
 
 	.container {
-		width: 1400px !important;
-		@apply mx-auto px-2 sm:px-4;
+		max-width: 1400px !important;
+		@apply mx-auto px-6;
 	}
 
 	.calculator-heading {
